<resources>
    <string name="app_name">atividadePratica_2</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or_login_with">Or Login with</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me_and_keep_me_logged_in">Remember me and keep me logged in</string>
    <string name="your_password">Your password</string>
    <string name="password">Password</string>
    <string name="your_email">Your email</string>
    <string name="email_address">Email Address</string>
    <string name="appoint_your_doctor_easily">Appoint Your Doctor Easily</string>
    <string name="lab">Lab</string>
    <string name="medi">Medi</string>
    <string name="logo">Logo</string>
    <string name="background_image">Background Image</string>
</resources>