<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Imagem de fundo -->
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/background_pattern"
        android:alpha="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Logo do aplicativo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_medilab_logo"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <!-- Nome do app com texto dividido entre "Medi" e "Lab" -->
    <LinearLayout
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <!-- Texto "Medi" em preto -->
        <TextView
            android:id="@+id/medi_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medi"
            android:textColor="#333333"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Texto "Lab" em verde -->
        <TextView
            android:id="@+id/lab_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab"
            android:textColor="#0ABAB5"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Tagline explicando o propósito do app -->
    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appoint_your_doctor_easily"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Título para campo de e-mail -->
    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tagline"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp" />

    <!-- Campo de input para o e-mail -->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/email_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintWidth_default="spread" />

    <!-- Título para o campo de senha -->
    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Campo de input para a senha -->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_invisible"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintWidth_default="spread" />

    <!-- Caixa de seleção para "Lembre-se de mim" -->
    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me_and_keep_me_logged_in"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintStart_toStartOf="@id/password_input"
        android:layout_marginTop="8dp" />

    <!-- Botão de Sign In -->
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/sign_in_button_background"
        android:drawablePadding="8dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/remember_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Texto "Or Login With" -->
    <TextView
        android:id="@+id/or_login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Botões para login social -->
    <LinearLayout
        android:id="@+id/social_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/or_login_with"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/facebook_button"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:background="@drawable/facebook_button_background"
            android:drawableStart="@drawable/ic_facebook"
            android:paddingStart="16dp"
            android:text="@string/facebook"
            android:textColor="@color/facebookBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/google_button"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:background="@drawable/google_button_background"
            android:drawableStart="@drawable/ic_google"
            android:paddingStart="16dp"
            android:text="@string/google"
            android:textColor="@color/googleText"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Link para cadastro (Sign Up) -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Texto "Don't have an account?" -->
        <TextView
            android:id="@+id/sign_up_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingStart="20dp"/>

        <!-- Texto "Sign Up" -->
        <TextView
            android:id="@+id/sign_up_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
